# cppquiz

./: CMakeLists.txt  Makefile  README.md
.github/workflows/: cmake.yml
src/: Question.cpp  Question.hpp  chatgpt_api.cpp  chatgpt_api.hpp  main.cpp
src/lib/: tinyxml.cpp
test/: QuestionTestCase.cpp
